# chalix-plugin

./: .gitignore  README.md
chalix-theme/: .hatch_build.py  Makefile  pyproject.toml
chalix-theme/chalix_theme/: plugin.py
chalix-theme/chalix_theme/patches/: mfe-env-config-buildtime-definitions  mfe-env-config-buildtime-imports
chalix-theme/chalix_theme/templates/chalix_theme/cms/templates/widgets/: footer.html  header.html
chalix-theme/chalix_theme/templates/chalix_theme/lms/: dashboard.html
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/js/: dark-theme.js
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/: chalix-design-overrides.css
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/certificates/: _certificate.scss
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/courseware/: _about.scss  _bookmarks.scss  _discover.scss
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/extra/: _footer.scss  _header.scss
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/home/: _home.scss
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/programs/: _programs.scss
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/sass/xblock/: _xblock.scss
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/templates/: course.html  dashboard_chalix.html  footer.html  index.html  index_overlay.html
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/templates/courseware/: course_about.html  course_about_sidebar_header.html  courses.html
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/templates/dashboard/: _dashboard_course_listing_chalix.html
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/templates/discovery/: course_card.underscore
chalix-theme/chalix_theme/templates/chalix_theme/lms/static/templates/header/: brand.html  header.html  (+4 more)
chalix-theme/chalix_theme/templates/chalix_theme/tasks/: init.sh
(+44 files in other folders)
