#https://hatch.pypa.io/latest/config/build/

[project]
name = "chalix-theme"
description = "Chalix theme plugin for Chalix Ed"
license = { text = "AGPLv3" }
requires-python = ">=3.9"
authors = [{ name = "Alimento" }, { email = "alimento128@gmail.com" }]
maintainers = [
    { name = "Alimento" }, { email = "alimento128@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor-mfe>=20.0.0,<21.0.0", 
  "tutor>=20.0.0,<21.0.0"
]

# hatch_build.py will set it later
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "tutor[dev]>=20.0.0,<21.0.0",
  "pylint",
  "black"
]

[project.entry-points."tutor.plugin.v1"]
chalix_theme = "chalix_theme.plugin"

[project.urls]
Code = "https://github.com/Alimento-Team/chalix-plugin"
Documentation = "https://docs.tutor.edly.io/"
Homepage = "https://github.com/Alimento-Team/chalix-plugin"

# hatch related configurations
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = ["/chalix_theme", ".hatch_build.py"]
exclude = ["tests*"]

# we need this becuase our project escapes default hatch file selection.
# see https://hatch.pypa.io/latest/plugins/builder/wheel/#default-file-selection
[tool.hatch.build.targets.wheel]
packages = ["/chalix_theme"]

[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"
